# PAP

./: .Makefile.swo  .Makefile.swp  .gitignore  Ivanov Report.docx  Makefile  README.md  Report.docx  alu.v  alu_tb.v  mips.v  res.txt  runner.py  test.vvp  utils.v
01/: alu.v  runner.py  utils.v
01 Simple MIPS CPU/: mips.v
01 Simple MIPS CPU/code/: change_me  change_me.S  gcd.S  inputvars.def  make_res.txt
01 Simple MIPS CPU/code/test/: jr_jal.S  jr_jal.res  sw_lw.S
01/code/: inputvars.def
01/code/test/: sll_srl.res
01/dump/: program.S
02/: time_records.txt
02 OpenMP OpenMPI/: Calcs.xlsx  Report.docx
02 OpenMP OpenMPI/example/mpi/: Makefile
02 OpenMP OpenMPI/particle_filter/: CMakeLists.txt  pf_main.cpp
02 OpenMP OpenMPI/particle_filter/laserSimulator/: lasersimulator.cpp
02/example/mpi/: .gitignore  program.c
02/particle_filter/: CMakeLists.txt  pf_main.cpp  timing.txt
02/particle_filter/laserSimulator/: lasersimulator.cpp
02/particle_filter_init/: CMakeLists.txt  pf_main.cpp
03 Pipielined MIPS CPU/: EX.v  HU.v  ID.v  IF.v  MEM.v  Makefile  mips.v  print.txt  runner.py  utils.v
03 Pipielined MIPS CPU/code/: change_me  change_me.S  gcd.S  inputvars.def  make_res.txt
03 Pipielined MIPS CPU/code/test/: add_addi_sub.S  add_addi_sub.res  slt_beq_bne.res
03 Pipielined MIPS CPU/dump/: a.txt  cmds.ods  code.S
code/: Makefile  change_me  change_me (copy).S  change_me.S  change_me.srec  dummy.S  gcd.S  inputvars.def  make_res.txt
code/test/: and_or.S  and_or.res  sll_srl.S  slt_beq_bne.S  sw_lw.res
dump/: .~lock.cmds.ods#  a.out  cmds.ods
